<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout="@layout/preference_item"
    android:title="title_activity_setting">

    <PreferenceCategory
        android:layout="@layout/preference_category_widget"
        android:title="@string/setting_t1">
        <CheckBoxPreference
            android:key="setNotification"
            android:layout="@layout/preference_item"
            android:summary=""
            android:title="@string/setting_noti"
            android:defaultValue="true"/>

        <CheckBoxPreference
            android:key="setStart"
            android:layout="@layout/preference_item"
            android:summary=""
            android:title="@string/setting_start"
            android:defaultValue="false"/>

        <CheckBoxPreference
            android:key="setToast"
            android:layout="@layout/preference_item"
            android:summary=""
            android:title="@string/setting_toast"
            android:defaultValue="true"/>

        <ListPreference
            android:key="ListPreference"
            android:title="@string/list_title"
            android:entries="@array/list_pref"
            android:entryValues="@array/listvalues_pref"
            android:defaultValue="50"
            />

        <Preference
            android:key="HisClearPreference"
            android:layout="@layout/preference_item"
            android:title="@string/setting_hisclear" />

        <ListPreference
            android:key="sourceListPreference"
            android:title="@string/source_list_title"
            android:entries="@array/source_list_pref"
            android:entryValues="@array/source_listvalues_pref"
            android:defaultValue="1"
            />

    </PreferenceCategory>

    <PreferenceCategory
        android:layout="@layout/preference_category_widget"
        android:title="@string/setting_t2">
        <Preference
            android:key="version"
            android:layout="@layout/preference_item"
            android:summary="V 1.3"
            android:title="@string/setting_ver" />

    </PreferenceCategory>

</PreferenceScreen>